# etch

./: .gitignore  Cargo.toml  README.md  agents.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
api/: package.json  schema.sql  tsconfig.json  wrangler.toml
api/src/: index.ts
cli/: package.json  tsconfig.json
cli/src/: index.ts  index.tsx
cli/src/api/: account.ts  client.ts  inscriptions.ts
cli/src/game/: ambient.ts  combat.ts  commands.ts  cutscenes.ts  death.ts  encounter.ts  horris.ts  items.ts  mark.ts  prose.ts  queen.ts  reducer.ts  tick.ts  types.ts  world.ts
cli/src/store/: account.ts  combat-lock.ts  inscriptions.ts  json-file.ts  save.ts
cli/src/ui/: app.tsx  combat-panels.tsx  combat-scene.tsx  game.tsx  hooks.ts  hud.tsx  input-bar.tsx  layouts.tsx  line-color.ts  line-view.tsx  panels.tsx  precombat.tsx  register.tsx  stamina-bar.tsx  theme.ts
docs/: comments.md  design.md  protocol.md  story.md  tech.md  theme.md
migrations/: 0001_init.sql  0002_player_state.sql  0003_inscriptions.sql  0004_inventory.sql
scripts/: build-all.sh  set-version.sh
src/: auth.rs  commands.rs  db.rs  death.rs  encounter.rs  item.rs  main.rs  session.rs  world.rs
src/render/: messages.rs  mod.rs  palette.rs
static/: index.html
web/: app.js  astro.config.mjs  index.html  package.json  style.css
web/src/components/: InstallBox.astro
web/src/layouts/: Layout.astro
web/src/pages/: index.astro  story.astro
web/src/styles/: base.css  theme.css
