[package]
name = "etch"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3"

# Async runtime — the foundation everything else sits on
tokio = { version = "1", features = ["full"] }

# Web framework — handles HTTP and WebSocket on the browser side
axum = { version = "0.7", features = ["ws"] }

# Database — async SQLite with compile-time checked queries
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }

# Serialization — for any JSON config or structured data
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging — structured logs, integrates well with tokio
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Password hashing
argon2 = "0.5"
password-hash = { version = "0.5", features = ["rand_core"] }

# Error handling — ergonomic ? propagation
anyhow = "1"
thiserror = "1"

# Time + small utilities
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# For embedding the static HTML page in the binary
include_dir = "0.7"

[profile.release]
# Smaller binary, slightly slower compile
lto = "thin"
codegen-units = 1
strip = true